product_docs/docs/pgaa/1.3/overview/compatibility.mdx
---
title: Analytics Accelerator compatibility
navTitle: Compatibility
description: Compatibility of Analytics Accelerator.
---


### Postgres compatibility

| Postgres distribution                 | Postgres version |
|:----------------------------------------|:-----------------------|
| **Postgres (PG)**                     | 16, 17     | 
| **EDB Postgres Extended Server (PGE)**  | 16, 17     | 
| **EDB Postgres Advanced Server (EPAS)** | 16, 17     | 



### Platform compatibility

Debian 11/12 or Ubuntu 22/24 on amd64 architectures, and RHEL 8/9 on both amd64 and arm64.

### Spark

Apache Spark: Version 3.4 or later.

### PGD

PGD version 6.1 or later.

### Hybrid Manager

PGAA version 1.3.1 is included with Hybrid Manager 1.3. 

### Supported storage formats and providers

| Data Format | Operation | Object storage | Engine support |
| ----------- | --------- | ---------------------------------- | -------------- | 
| Iceberg | Read | Local, S3, GCP, Azure (via storage locations) | Seafowl |
| Iceberg | Read | Iceberg REST catalog | Seafowl  <br /> Spark |
| Delta Lake | Read | Local, S3, GCP, Azure (via storage locations) | Seafowl |
| Iceberg | Write (via `CTAS`) | Local, S3, GCP, Azure (via storage locations) | Postgres engine via CompatScan |
| Iceberg | Write (via `CTAS`) | Iceberg REST catalog | Postgres engine via CompatScan |
| Delta Lake | Write (via `CTAS`) | Local, S3, GCP, Azure (via storage locations) | Postgres engine via CompatScan |
| Iceberg | Write (using PGD) | Local, S3, GCP, Azure (via storage locations) | Seafowl |
| Delta Lake | Write (using PGD) | Local, S3, GCP, Azure (via storage locations) | Seafowl |
| Iceberg | Write (using PGD) | Iceberg REST catalog | Postgres engine via CompatScan |
